<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text = "@string/log_in"
                    android:textSize = "30sp"/>

                <EditText
                    android:id="@+id/LogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/forEditLog" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/password"
                    android:layout_marginRight="30dp"
                    android:textSize = "30sp"/>
                <EditText
                    android:id = "@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint = "@string/forEditPas"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <Button
                android:id = "@+id/registration"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"/>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <Button
                android:id = "@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text = "@string/enter"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <Button
                android:id = "@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text = "@string/exit"/>


            </LinearLayout>
        </LinearLayout>
</FrameLayout>